@@ -3,7 +3,7 @@ Section: admin
 Priority: optional
 Maintainer: Dpkg Developers <debian-dpkg@lists.debian.org>
 Uploaders: Guillem Jover <guillem@debian.org>
-Build-Depends: libxmltok1-dev, debhelper (>= 9)
+Build-Depends: debhelper (>= 9), pkg-config, libdpkg-dev, libxmltok1-dev
 Standards-Version: 3.9.5
 
 Package: debsig-verify
